--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "urss",
+  "name": "urssApp",
   "version": "1.0.0",
   "description": "A Simple RSS Feed",
   "repository": {
@@ -12,6 +12,7 @@
     "conventional-changelog": "0.0.11",
     "del": "^0.1.2",
     "gulp": "^3.8.10",
+    "gulp-6to5": "^3.0.0",
     "gulp-angular-filesort": "^1.0.4",
     "gulp-angular-gettext": "^0.3.1",
     "gulp-angular-templatecache": "^1.4.1",
@@ -40,7 +41,7 @@
     "gulp-rimraf": "^0.1.0",
     "gulp-run": "^1.6.4",
     "gulp-size": "^1.0.0",
-    "gulp-sourcemaps": "^1.2.2",
+    "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.0",
     "gulp-usemin": "^0.3.8",
     "gulp-util": "^3.0.1",
