--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "gulp-rev": "^1.1.0",
     "gulp-rimraf": "^0.1.0",
     "gulp-run": "^1.6.4",
+    "gulp-sass": "^1.3.2",
     "gulp-size": "^1.0.0",
     "gulp-sourcemaps": "^1.3.0",
     "gulp-uglify": "^1.0.0",
