--- a/bower.json
+++ b/bower.json
@@ -2,10 +2,10 @@
   "name": "urss",
   "version": "0.0.0",
   "dependencies": {
-    "angular": "^1.3.0",
+    "angular": "~1.3.0",
     "json3": "^3.3.0",
     "es5-shim": "^4.0.0",
-    "angular-animate": "^1.3.0",
+    "angular-animate": "~1.3.12",
     "angular-touch": "^1.3.0",
     "semantic-ui": "~1.7.3",
     "angular-filter": "~0.5.2",
