--- a/bower.json
+++ b/bower.json
@@ -9,7 +9,8 @@
     "angular-touch": "^1.3.0",
     "semantic-ui": "~1.7.3",
     "angular-filter": "~0.5.2",
-    "ui-router": "~0.2.13"
+    "ui-router": "~0.2.13",
+    "angular-messages": "~1.3.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
