--- a/bower.json
+++ b/bower.json
@@ -10,7 +10,9 @@
     "semantic-ui": "~1.7.3",
     "angular-filter": "~0.5.2",
     "ui-router": "~0.2.13",
-    "angular-messages": "~1.3.12"
+    "angular-messages": "~1.3.12",
+    "moment": "~2.9.0",
+    "angular-sanitize": "~1.3.12"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
