--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,7 @@
 {
-  "name": "urss",
-  "version": "0.0.0",
+  "name": "urssApp",
+  "version": "0.1.0",
+  "main": "dist/urssApp.js",
   "dependencies": {
     "angular": "~1.3.0",
     "json3": "^3.3.0",
