--- a/bower.json
+++ b/bower.json
@@ -2,17 +2,7 @@
   "name": "urssAppPages",
   "version": "0.1.0",
   "dependencies": {
-    "angular": "~1.3.0",
-    "json3": "^3.3.0",
-    "es5-shim": "^4.0.0",
-    "angular-animate": "~1.3.12",
-    "angular-touch": "^1.3.0",
-    "semantic-ui": "~1.7.3",
-    "angular-filter": "~0.5.2",
-    "ui-router": "~0.2.13",
-    "angular-messages": "~1.3.12",
-    "moment": "~2.9.0",
-    "angular-sanitize": "~1.3.12"
+    "urss-mallowigi":"~0.1.1"
   },
   "devDependencies": {
     "angular-mocks": "~1.3.0",
